feat: add complete flux of rent and return a book
